--- a/src/components/Container/Sidebar/SidebarGroup/index.module.css
+++ b/src/components/Container/Sidebar/SidebarGroup/index.module.css
@@ -13,17 +13,17 @@
         flex
         flex-col
         gap-2;
-
-        &::after {
-            @apply absolute
-            left-[0.45rem]
-            top-0
-            z-10
-            h-full
-            w-px
-            bg-neutral-200
-            content-['']
-            dark:bg-neutral-800;
-        }
     }
+}
+
+.items::after {
+    @apply absolute
+    left-[0.45rem]
+    top-0
+    z-10
+    h-full
+    w-px
+    bg-neutral-200
+    content-['']
+    dark:bg-neutral-800;
 }
