--- a/src/layouts/layouts.module.css
+++ b/src/layouts/layouts.module.css
@@ -8,12 +8,8 @@
 }
 
 .homeLayout {
-  @apply gap-8
-      md:flex-row
-      md:gap-14
-      xl:gap-28
-      w-full
-      2xl:gap-32;
+  @apply justify-center
+  align-middle;
 }
 
 .pageLayout {
@@ -25,4 +21,40 @@
     pt-10
     flex-1;
   }
+}
+
+.blogLayout {
+  @apply bg-gradient-to-t
+  flex
+  w-full
+  justify-center;
+
+  .blogLayoutMain {
+    @apply max-w-5xl
+    gap-4
+    px-4
+    py-12
+    md:px-14
+    lg:px-28
+  }
+}
+
+.postLayout {
+  @apply flex
+  justify-center
+  w-full
+  px-3.5
+  py-7;
+}
+
+.centerLayout {
+  @apply flex
+  w-full
+  min-w-0
+  items-center
+  justify-center
+  px-4
+  py-14
+  md:px-14
+  lg:px-28;
 }
