--- a/src/layouts/layouts.module.css
+++ b/src/layouts/layouts.module.css
@@ -58,3 +58,37 @@
   md:px-14
   lg:px-28;
 }
+
+.aboutLayout {
+  @apply flex
+  w-full
+  min-w-0
+  items-center
+  justify-center
+  flex-col
+  relative;
+
+  .downloadLink {
+    @apply absolute
+    bottom-2
+    rounded
+    border-solid
+    border-2
+    px-4
+    py-2
+    ;
+  }
+}
+
+.soonLayout {
+  @apply items-center
+  justify-center;
+
+  .backHome {
+    @apply px-8
+    py-4
+    rounded
+    text-white
+    bg-green-600;
+  }
+}
